syntax = "proto3";

package role.v1beta1;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "validate/validate.proto";

message CreateRoleRequest {
  string title = 1 [(validate.rules).string.min_len = 1];
  string filter = 2;
  string description = 3;
}

message CreateRoleResponse {
  uint32 role_id = 1;
}

message UpdateRoleRequest {
  uint32 role_id = 1 [(validate.rules).uint32.gt = 0];
  string title = 2 [(validate.rules).string.min_len = 1];
  string filter = 3;
  string description = 4;
}
message UpdateRoleResponse {}

message DeleteRoleRequest {
  uint32 role_id = 1 [(validate.rules).uint32.gt = 0];
  // Role ID to be used as a replacement for the role. Additional logic applies.
  uint32 replacement_role_id = 2;
}

message DeleteRoleResponse {}

message GetRoleRequest {
  uint32 role_id = 1 [(validate.rules).uint32.gt = 0];
}

message GetRoleResponse {
  uint32 role_id = 1;
  string title = 2;
  string filter = 3;
  string description = 4;
}

message SetDefaultRoleRequest {
  uint32 role_id = 1 [(validate.rules).uint32.gt = 0];
}

message SetDefaultRoleResponse {}

message AssignRolesRequest {
  repeated uint32 role_ids = 1;
  uint32 user_id = 2 [(validate.rules).uint32.gt = 0];
}

message AssignRolesResponse {}

message ListRolesRequest {}

message ListRolesResponse {
  message RoleData {
    uint32 role_id = 1;
    string title = 2;
    string filter = 3;
    string description = 4;
  }

  repeated RoleData roles = 1;
}

// Service Role provides public methods for managing Roles.
service RoleService {
  // CreateRole creates a new role.
  rpc CreateRole(CreateRoleRequest) returns (CreateRoleResponse) {
    option (google.api.http) = {
      post: "/v1/management/Role/Create"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Create Role"
      description: "Creates a new Role."
    };
  }

  // UpdateRole creates a new role.
  rpc UpdateRole(UpdateRoleRequest) returns (UpdateRoleResponse) {
    option (google.api.http) = {
      post: "/v1/management/Role/Update"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Update Role"
      description: "Updates an existing Role."
    };
  }

  // DeleteRole creates a new role.
  rpc DeleteRole(DeleteRoleRequest) returns (DeleteRoleResponse) {
    option (google.api.http) = {
      post: "/v1/management/Role/Delete"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Delete Role"
      description: "Deletes a Role."
    };
  }

  // GetRole retrieves a single role.
  rpc GetRole(GetRoleRequest) returns (GetRoleResponse) {
    option (google.api.http) = {
      post: "/v1/management/Role/Get"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Get Role"
      description: "Retrieves a Role by ID."
    };
  }

  // ListRoles retrieves a roles.
  rpc ListRoles(ListRolesRequest) returns (ListRolesResponse) {
    option (google.api.http) = {
      post: "/v1/management/Role/List"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "List Roles"
      description: "Lists Roles."
    };
  }

  // AssignRoles replaces all assigned roles for a user.
  rpc AssignRoles(AssignRolesRequest) returns (AssignRolesResponse) {
    option (google.api.http) = {
      post: "/v1/management/Role/Assign"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Assign Roles"
      description: "Assigns Roles replaces all existing Roles for a User."
    };
  }

  // SetDefaultRole configures default role assigned to users.
  rpc SetDefaultRole(SetDefaultRoleRequest) returns (SetDefaultRoleResponse) {
    option (google.api.http) = {
      post: "/v1/management/Role/SetDefault"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Set default Role"
      description: "Configures default Role assigned to Users."
    };
  }
}
